<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:andorid="http://schemas.android.com/tools"
    android:id="@+id/albumDetailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <!-- Contenedor scrollable -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!--HEADER-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/backBtnAlbum"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_button"
                    android:src="@drawable/back_ico"
                    android:scaleType="center"/>

                <TextView
                    android:id="@+id/albumSectionTitle"
                    android:layout_width="210dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_height="wrap_content"
                    android:text="Detalle de álbum"
                    android:paddingTop="20dp"
                    android:textSize="16dp"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"/>

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/bg_button"
                    android:src="@drawable/share_ico"
                    android:scaleType="center"/>
            </LinearLayout>

            <!--CARD DE ALBUM-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_card"
                android:elevation="4dp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/imageAlbumCover"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:src="@drawable/ic_launcher_background" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameAlbumName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nombre del álbum"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:paddingTop="8dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/genraText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tracks album"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        android:paddingTop="4dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="@color/white"/>
                </LinearLayout>

            </LinearLayout>

            <!--CARD DE DESCRIPCIÓN DE ALBUM-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_card_with_shadow"
                android:elevation="4dp"
                android:gravity="center_vertical">

                <!--CABECERA-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/imageAlbumCoverDescription"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="centerCrop"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/AlbumNameDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nombre del álbum"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:paddingTop="8dp"
                            android:fontFamily="@font/poppins_regular"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/releaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Año 2025"
                            android:textSize="14sp"
                            android:paddingTop="4dp"
                            android:fontFamily="@font/poppins_light"
                            android:textColor="@color/white"/>
                    </LinearLayout>
                </LinearLayout>

                <!--CONTENIDOS-->
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:padding="16dp"
                    android:fadeScrollbars="false"
                    android:scrollbarThumbVertical="@drawable/scroll_thumb"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tracksAlbumDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam velit diam, finibus vitae justo eget, iaculis pharetra lacus. Maecenas bibendum maximus dapibus. Etiam dictum in lacus sit amet tempus. Aenean et mattis mauris. Maecenas a aliquet diam. Vestibulum a sagittis dui. Nam auctor tortor et tortor condimentum, ut sollicitudin justo rutrum. Proin at malesuada libero. Curabitur non commodo ex. Morbi aliquam diam vitae est consequat, sit amet facilisis metus facilisis. Aenean vitae urna non ipsum tempor blandit eu et odio. Fusce facilisis ipsum non scelerisque scelerisque. Duis scelerisque pulvinar pulvinar. Maecenas placerat euismod condimentum. Etiam eu justo vitae justo efficitur posuere.

Nunc at maximus purus. Maecenas rhoncus ipsum id dui suscipit dignissim. Aliquam aliquam ante non tincidunt aliquet. Phasellus ornare vestibulum vehicula. Sed egestas fermentum libero a ultrices. Duis non mi id nisi consequat porta. Sed in efficitur elit. Nulla et felis sed dui vehicula aliquet. Maecenas eget scelerisque sem, vel feugiat arcu. Mauris lobortis neque in magna consequat, et porta sem finibus. Morbi in orci accumsan, varius ante eget, luctus massa."
                        android:textSize="14sp"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/white"/>


                </ScrollView>

            </LinearLayout>

            <!--CARD DE TRACKS DE ALBUM-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_card"
                android:elevation="4dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/titleTracksSection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tracks del Álbum"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trackRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="false"
                    android:clipToPadding="false"
                    android:padding="8dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>