...
            android:background="@drawable/circle_background"
            android:contentDescription="Menu"
            android:src="@drawable/ic_menu"
            app:tint="#FFFFFF" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_weight="5"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="Vinilo App"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_box"
        tools:ignore="MissingConstraints" />

    <!-- Grid de álbumes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_albums"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="8dp"
...
