<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/artistsFragment"
        android:title="Artistas"
        android:icon="@drawable/performer_ico"/>
    <item
        android:id="@+id/albumsFragment"
        android:title="Álbumes"
        android:icon="@drawable/album_ico"/>
    <item
        android:id="@+id/awardsFragment"
        android:title="Premios"
        android:icon="@drawable/award_ico"/>
    <item
        android:id="@+id/collectorsFragment"
        android:title="Coleccionistas"
        android:icon="@drawable/collector_ico_w"/>
</menu>
