<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="8dp"
    android:background="@drawable/album_card_background"
    android:clipToPadding="false">

    <!-- Imagen de fondo -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="6dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <ImageView
            android:id="@+id/albumImage"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:contentDescription="@string/album_cover"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/albumName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="12dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_semibold"
            android:text="Nombre Álbum"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

</FrameLayout>
